# logsentinel

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  exceptions.py  factory.py  interfaces.py  models.py  storage.py
src/agents/: __init__.py  base.py  factory.py  file_agent.py  http_client.py
src/api/: main.py  routes.py  schemas.py
src/parsers/: nginx.py
tests/: test_agents.py  test_api.py  test_factory.py  test_parsers.py  test_storage_api.py
